Adding Generics and Specs. Added Some Seed  Data for Dev work

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source = luckyduck.db"
-  }
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
